# wua-bot

./: .env  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  migrate.Dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 69606844ff5f_wua.py
bot/: __main__.py  models.py  postgres.py
