[tool.poetry]
name = "wua-bot"
version = "0.1.0"
description = ""
authors = ["Dmitri Tsiu <dmitrimeowsalot@gmail.com>"]
packages = [
    { include = "bot" }
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
aiogram = "^3.13.1"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
greenlet = "^3.1.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pylint = "^3.3.1"

[tool.pylint."MESSAGE CONTROL"]
disable = "C0114,C0115,C0116,R0903"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
